Bug 431871 - Updating proprietary Nvidia drivers on OpenSUSE Tumbleweed requires multiple license agreements
Summary: Updating proprietary Nvidia drivers on OpenSUSE Tumbleweed requires multiple ...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.20.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-21 12:50 UTC by Tobias G.
Modified: 2021-03-08 18:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias G. 2021-01-21 12:50:28 UTC
SUMMARY
When I try to update the nvidia drivers on my OpenSUSE Tumbleweed machine, I have to agree to the nvidia license 4 times, even though it's always the same one (though for different components), which makes it also necessary to agree four times to the changes that are applied due to the update.
When I update my system using "zypper dup" I have to agree just one time to the license.

STEPS TO REPRODUCE
1. Install proprietary nvidia drivers
2. Get an update for them
3. Open Discover -> Updates
4. Try to install updates
5. Agree to changed packages
6. Agree to license
5. Agree to changed packages
6. Agree to license
5. Agree to changed packages
6. Agree to license
5. Agree to changed packages
6. Agree to license
7. Updates are just installed after that

OBSERVED RESULT
I have to agree to the same license 4 times before I can update my proprietary nvidia drivers

EXPECTED RESULT
I have to agree to changed packages and the license just one time before updates are installed

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
Operating System: openSUSE Tumbleweed 20210119
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2
Kernel Version: 5.10.7-1-default
OS Type: 64-bit
Processors: 8 × Intel® Core™ i7-6700K CPU @ 4.00GHz
Memory: 23.4 GiB of RAM
Graphics Processor: GeForce GTX 1080/PCIe/SSE2

ADDITIONAL INFORMATION
Comment 1 Tobias G. 2021-03-05 10:02:57 UTC
THe nvidia driver had to be updated again on my system, I created a video of the multiple requests to show the issue.
It can be found here: https://youtu.be/weeouhIMcOw
Comment 2 Bug Janitor Service 2021-03-05 20:01:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/90
Comment 3 Aleix Pol 2021-03-08 16:48:55 UTC
Git commit 3f865a876ab8b36d9f5dca0e62b6b6157b426217 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 08/03/2021 at 16:48.
Pushed by apol into branch 'master'.

pk: Save the accepted eulas so they don't need to be accepted every time

We save them with a sha of the contents in case they change.

M  +8    -7    libdiscover/backends/PackageKitBackend/PKTransaction.cpp
M  +35   -4    libdiscover/backends/PackageKitBackend/PackageKitUpdater.cpp
M  +5    -0    libdiscover/backends/PackageKitBackend/PackageKitUpdater.h

https://invent.kde.org/plasma/discover/commit/3f865a876ab8b36d9f5dca0e62b6b6157b426217