pk: Save the accepted eulas so they don't need to be accepted every time

We save them with a sha of the contents in case they change.

BUG: 431871